--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,7 +15,7 @@ jobs:
         
       - name: cml_run
         env:
-          repo_token: {{secrets.GITHUB_TOKEN}}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Your ML workflow commands
           pip install --upgrade pip
