--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,18 +4,32 @@ name: train-NLP-ML-usecase
 on: [push]
 
 jobs:
-  run:
-    runs-on: [ubuntu-latest]
+  deploy-runner:
+  runs-on: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v2
       - uses: iterative/setup-cml@v1
       - uses: actions/setup-python@v2
-        with:
-          python-version: '3.7'
-        
-      - name: cml_run
+      - name: 'Deploy runner in EC2'
+        shell: bash
         env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          AWS_ACCESS_KEY_ID: $ {{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          cml-runner \
+          --cloud aws \
+          --cloud-region us-west \
+          --cloud-type=m \
+          --labels=cml-runner
+  model-training:
+    needs: deploy-runner
+    runs-on: [self-hosted, cml-runner]
+    container: docker://iterativeai/cml:0-dvc2-base1
+    steps:
+      - uses: actions/checkout@v2
+        name: "Train my model"
+        env:
+          repo_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           # Your ML workflow commands
           pip install --upgrade pip
