--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,12 +8,12 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
       - uses: iterative/setup-cml@v1
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
       - name: 'Deploy runner in EC2'
         shell: bash
         env:
           REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          AWS_ACCESS_KEY_ID: $ {{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           cml-runner \
@@ -27,7 +27,7 @@ jobs:
     container: docker://iterativeai/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v2
-        name: "Train my model"
+      - name: "Train my model"
         env:
           repo_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
