--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           cml-runner \
           --cloud aws \
-          --cloud-region us-west \
+          --cloud-region us-east \
           --cloud-type=m \
           --labels=cml-runner
   model-training:
